// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getVersionType > should return the correct version type 1`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 2`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 3`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 4`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 5`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 6`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 7`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 8`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 9`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 10`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 11`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 12`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 13`] = `
{
  "commitSha": undefined,
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type 14`] = `
{
  "commitSha": "fa5810519dcb",
  "tag": undefined,
}
`;
